--- a/AlgoTraderSite/Content/FontGallery.html
+++ b/AlgoTraderSite/Content/FontGallery.html
@@ -89,10 +89,6 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2617;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2617;" />
-	</div>
-	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#x2616;"></div>
 		<input type="text" readonly="readonly" value="&amp;#x2616;" />
 	</div>
@@ -160,6 +156,42 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#x235c;"></div>
 		<input type="text" readonly="readonly" value="&amp;#x235c;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x25a4;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x25a4;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2191;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2191;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2193;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2193;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x2197;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x2197;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x25d3;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x25d3;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x21e1;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x21e1;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x21e3;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x21e3;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x21b3;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x21b3;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#x21b4;"></div>
+		<input type="text" readonly="readonly" value="&amp;#x21b4;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -169,10 +201,6 @@
 	<span class="box1">
 		<span aria-hidden="true" class="icon-home"></span>
 		&nbsp;icon-home
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-home-2"></span>
-		&nbsp;icon-home-2
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-settings"></span>
@@ -237,6 +265,42 @@
 	<span class="box1">
 		<span aria-hidden="true" class="icon-eye"></span>
 		&nbsp;icon-eye
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-stats-2"></span>
+		&nbsp;icon-stats-2
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-plus-alt"></span>
+		&nbsp;icon-plus-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-minus-alt"></span>
+		&nbsp;icon-minus-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-image"></span>
+		&nbsp;icon-image
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-type"></span>
+		&nbsp;icon-type
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-plus"></span>
+		&nbsp;icon-plus
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-minus"></span>
+		&nbsp;icon-minus
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-checkmark"></span>
+		&nbsp;icon-checkmark
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-checkmark-2"></span>
+		&nbsp;icon-checkmark-2
 	</span>
 	</section>
 	<footer>
