Site design - added portfolio with lock icon to Watchlists - modified color scheme to allow use of more colors - changed some buttons, some now are just glyphs - other stuff

--- a/AlgoTraderSite/Content/FontGallery.html
+++ b/AlgoTraderSite/Content/FontGallery.html
@@ -20,7 +20,7 @@
 		padding: 0;
 	}
 	.glyph {
-		font-size: 16px;
+		font-size: 12px;
 		float: left;
 		text-align: center;
 		background: #eee;
@@ -72,7 +72,7 @@
 	}
 	a:hover, a:focus {color: #000;}
 	.box1 {
-		font-size: 16px;
+		font-size: 12px;
 		display: inline-block;
 		width: 15em;
 		padding: .25em .5em;
@@ -89,108 +89,92 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2616;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2616;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe000;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2630;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2630;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe001;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2631;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2631;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe002;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2638;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2638;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe003;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x25ce;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x25ce;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe004;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x273f;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x273f;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe005;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2715;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2715;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe006;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2762;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2762;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe007;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2713;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2713;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe008;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2717;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2717;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe009;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2701;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2701;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2652;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2652;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2653;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2653;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x25a0;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x25a0;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00d;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x25c4;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x25c4;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x274b;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x274b;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x235c;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x235c;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe010;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x25a4;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x25a4;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe011;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2191;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2191;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe012;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2193;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2193;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe013;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x2197;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x2197;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe014;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x25d3;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x25d3;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x21e1;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x21e1;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x21e3;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x21e3;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x21b3;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x21b3;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#x21b4;"></div>
-		<input type="text" readonly="readonly" value="&amp;#x21b4;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe015;" />
 	</div>
 	</section>
 	<div class="clear"></div>
@@ -199,92 +183,56 @@
 		<h1>Class Names</h1>
 	</header>
 	<span class="box1">
+		<span aria-hidden="true" class="icon-dollar"></span>
+		&nbsp;icon-dollar
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-alphabet"></span>
+		&nbsp;icon-sort-by-alphabet
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-alphabet-alt"></span>
+		&nbsp;icon-sort-by-alphabet-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-lock"></span>
+		&nbsp;icon-lock
+	</span>
+	<span class="box1">
 		<span aria-hidden="true" class="icon-home"></span>
 		&nbsp;icon-home
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-settings"></span>
-		&nbsp;icon-settings
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-equalizer"></span>
-		&nbsp;icon-equalizer
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-cog"></span>
-		&nbsp;icon-cog
+		<span aria-hidden="true" class="icon-eye-open"></span>
+		&nbsp;icon-eye-open
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-cogs"></span>
 		&nbsp;icon-cogs
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-wrench"></span>
-		&nbsp;icon-wrench
+		<span aria-hidden="true" class="icon-exclamation-sign"></span>
+		&nbsp;icon-exclamation-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-close"></span>
-		&nbsp;icon-close
+		<span aria-hidden="true" class="icon-plus-sign"></span>
+		&nbsp;icon-plus-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-spam"></span>
-		&nbsp;icon-spam
+		<span aria-hidden="true" class="icon-minus-sign"></span>
+		&nbsp;icon-minus-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-checkmark-circle"></span>
-		&nbsp;icon-checkmark-circle
+		<span aria-hidden="true" class="icon-remove-sign"></span>
+		&nbsp;icon-remove-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-cancel-circle"></span>
-		&nbsp;icon-cancel-circle
+		<span aria-hidden="true" class="icon-ok-sign"></span>
+		&nbsp;icon-ok-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-remove"></span>
-		&nbsp;icon-remove
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-bars"></span>
-		&nbsp;icon-bars
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-stats"></span>
-		&nbsp;icon-stats
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-coin"></span>
-		&nbsp;icon-coin
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-bullhorn"></span>
-		&nbsp;icon-bullhorn
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-star"></span>
-		&nbsp;icon-star
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-eye"></span>
-		&nbsp;icon-eye
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-stats-2"></span>
-		&nbsp;icon-stats-2
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-plus-alt"></span>
-		&nbsp;icon-plus-alt
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-minus-alt"></span>
-		&nbsp;icon-minus-alt
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-image"></span>
-		&nbsp;icon-image
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-type"></span>
-		&nbsp;icon-type
+		<span aria-hidden="true" class="icon-trash"></span>
+		&nbsp;icon-trash
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-plus"></span>
@@ -295,12 +243,32 @@
 		&nbsp;icon-minus
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-checkmark"></span>
-		&nbsp;icon-checkmark
+		<span aria-hidden="true" class="icon-question-sign"></span>
+		&nbsp;icon-question-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-checkmark-2"></span>
-		&nbsp;icon-checkmark-2
+		<span aria-hidden="true" class="icon-info-sign"></span>
+		&nbsp;icon-info-sign
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-attributes-alt"></span>
+		&nbsp;icon-sort-by-attributes-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-attributes"></span>
+		&nbsp;icon-sort-by-attributes
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-order"></span>
+		&nbsp;icon-sort-by-order
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-sort-by-order-alt"></span>
+		&nbsp;icon-sort-by-order-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-briefcase"></span>
+		&nbsp;icon-briefcase
 	</span>
 	</section>
 	<footer>
