Some new icons, added side panel to portfolio

--- a/AlgoTraderSite/Content/index.html
+++ b/AlgoTraderSite/Content/index.html
@@ -20,7 +20,7 @@
 		padding: 0;
 	}
 	.glyph {
-		font-size: 12px;
+		font-size: 14px;
 		float: left;
 		text-align: center;
 		background: #eee;
@@ -72,7 +72,7 @@
 	}
 	a:hover, a:focus {color: #000;}
 	.box1 {
-		font-size: 12px;
+		font-size: 14px;
 		display: inline-block;
 		width: 15em;
 		padding: .25em .5em;
@@ -176,28 +176,24 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe015;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe016;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe016;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe017;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe017;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe018;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe018;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
 	<header>
 		<h1>Class Names</h1>
 	</header>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-dollar"></span>
-		&nbsp;icon-dollar
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-sort-by-alphabet"></span>
-		&nbsp;icon-sort-by-alphabet
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-sort-by-alphabet-alt"></span>
-		&nbsp;icon-sort-by-alphabet-alt
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="icon-lock"></span>
-		&nbsp;icon-lock
-	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-home"></span>
 		&nbsp;icon-home
@@ -207,12 +203,12 @@
 		&nbsp;icon-eye-open
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-cogs"></span>
-		&nbsp;icon-cogs
+		<span aria-hidden="true" class="icon-briefcase"></span>
+		&nbsp;icon-briefcase
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-exclamation-sign"></span>
-		&nbsp;icon-exclamation-sign
+		<span aria-hidden="true" class="icon-cogs"></span>
+		&nbsp;icon-cogs
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-plus-sign"></span>
@@ -223,16 +219,24 @@
 		&nbsp;icon-minus-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-remove-sign"></span>
-		&nbsp;icon-remove-sign
-	</span>
-	<span class="box1">
 		<span aria-hidden="true" class="icon-ok-sign"></span>
 		&nbsp;icon-ok-sign
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-trash"></span>
-		&nbsp;icon-trash
+		<span aria-hidden="true" class="icon-remove-sign"></span>
+		&nbsp;icon-remove-sign
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-exclamation-sign"></span>
+		&nbsp;icon-exclamation-sign
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-question-sign"></span>
+		&nbsp;icon-question-sign
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-info-sign"></span>
+		&nbsp;icon-info-sign
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-plus"></span>
@@ -243,12 +247,12 @@
 		&nbsp;icon-minus
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-question-sign"></span>
-		&nbsp;icon-question-sign
+		<span aria-hidden="true" class="icon-sort-by-alphabet"></span>
+		&nbsp;icon-sort-by-alphabet
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-info-sign"></span>
-		&nbsp;icon-info-sign
+		<span aria-hidden="true" class="icon-sort-by-alphabet-alt"></span>
+		&nbsp;icon-sort-by-alphabet-alt
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-sort-by-attributes-alt"></span>
@@ -267,8 +271,28 @@
 		&nbsp;icon-sort-by-order-alt
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-briefcase"></span>
-		&nbsp;icon-briefcase
+		<span aria-hidden="true" class="icon-dollar"></span>
+		&nbsp;icon-dollar
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-trash"></span>
+		&nbsp;icon-trash
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-shopping-cart"></span>
+		&nbsp;icon-shopping-cart
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-lock"></span>
+		&nbsp;icon-lock
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-book"></span>
+		&nbsp;icon-book
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-bookmark"></span>
+		&nbsp;icon-bookmark
 	</span>
 	</section>
 	<footer>
