css changes, better visibility, spacing, colors, etc

--- a/AlgoTraderSite/Content/index.html
+++ b/AlgoTraderSite/Content/index.html
@@ -275,8 +275,8 @@
 		&nbsp;icon-dollar
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="icon-trash"></span>
-		&nbsp;icon-trash
+		<span aria-hidden="true" class="icon-remove"></span>
+		&nbsp;icon-remove
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="icon-shopping-cart"></span>
