--- a/AlgoTraderSite/Content/index.html
+++ b/AlgoTraderSite/Content/index.html
@@ -188,6 +188,10 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe018;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe018;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe019;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe019;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -293,6 +297,10 @@
 	<span class="box1">
 		<span aria-hidden="true" class="icon-bookmark"></span>
 		&nbsp;icon-bookmark
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="icon-stats"></span>
+		&nbsp;icon-stats
 	</span>
 	</section>
 	<footer>
